--- a/Assignment_3.ipynb
+++ b/Assignment_3.ipynb
@@ -450,7 +450,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "B-wnyPoQ00u2",
         "outputId": "e7915301-bac9-4910-a43f-034ffc7abf8f"
@@ -523,7 +524,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "OkvrZj4S1yXV",
         "outputId": "3a6538a1-0ea7-42e9-8419-fdf0a2b0afd6"
@@ -564,7 +566,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1012
         },
         "id": "I-Gswowl1yaG",
         "outputId": "2a28116b-47e3-44c1-9fa8-d5dec76b9755"
@@ -713,7 +715,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Z4VNTjlU1yjQ",
         "outputId": "ee4ada4e-253f-4ced-d924-263eb20693a4"
@@ -747,7 +750,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 772
+          "height": 921
         },
         "id": "zNHOVEw31yl7",
         "outputId": "5b2bb973-b27a-4485-f7d1-6e9d84610a16"
@@ -892,7 +895,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 596
+          "height": 867
         },
         "id": "KjhIqTVP1yvK",
         "outputId": "310f0d1d-f757-42ca-aa20-4b43cae63861"
